--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
+:root {
+  --primary: #f8f5f2;
+  --secondary: #eaddcf;
+  --tertiary: #ff8e3c;
+  --highlight: #d9376e;
+  --ff: Helvetica, Arial, sans-serif;
+  --padding-1: 4px;
+  --padding-2: 8px;
+  --padding-3: 12px;
+  --padding-4: 16px;
+  --padding-5: 20px;
+}
+
 body {
   background-color: #f5f5f5;
   font-family: Arial, sans-serif;
