--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
 :root {
-  --primary: #f8f5f2;
-  --secondary: #eaddcf;
-  --tertiary: #ff8e3c;
+  --primary:  #eaddcf;
+  --secondary: #ff8e3c;
   --highlight: #d9376e;
   --ff: Helvetica, Arial, sans-serif;
   --padding-1: 4px;
@@ -9,22 +8,26 @@
   --padding-3: 12px;
   --padding-4: 16px;
   --padding-5: 20px;
+  --margin-1: 4px;
+  --margin-2: 8px;
+  --margin-3: 12px;
+  --margin-4: 16px;
+  --margin-5: 20px;
 }
 
 body {
-  background-color: #f5f5f5;
-  font-family: Arial, sans-serif;
+  background-color: var(--primary);
+  font-family: var(--ff);
 }
 
 header {
   text-align: center;
-  padding: 10px;
-  background-color: #e0e0e0;
+  padding: var(--padding-3);
 }
 
 .product {
   border: 1px solid black;
-  margin: 10px;
-  padding: 10px;
+  margin: var(--margin-3);
+  padding: var(--padding-3);
   width: 300px; /* Not responsive */
 }
