--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,8 @@ header {
   margin: var(--margin-3);
   padding: var(--padding-3);
   display: flex;
+  flex: 1 1 0;
+  width: clamp(250px, 30%, 350px);
   flex-direction: column;
   justify-content: space-between;
 }
