--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,7 @@ header {
 
 #recommended-products {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
@@ -40,12 +41,13 @@ header {
   margin: var(--margin-3);
   padding: var(--padding-3);
   display: flex;
-  flex: 1 1 0;
-  width: clamp(250px, 30%, 350px);
+  width: clamp(100px, 15%, 200px);
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .product > img {
+  max-height: 250px;
   width: 100%;
+  object-fit: cover;
 }
